// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`reducer notificationPreferences/setActiveOutputRingtoneDevice sets the visual preference 1`] = `
Object {
  "audioNotifications": true,
  "visualNotifications": "mock visual preference",
}
`;

exports[`reducer notificationPreferences/setAvailableOutputDevices sets the audio preference 1`] = `
Object {
  "audioNotifications": "mock audio preference",
  "visualNotifications": true,
}
`;

exports[`reducer sets the correct initial state 1`] = `
Object {
  "audioNotifications": true,
  "visualNotifications": true,
}
`;
